# NapptendoGB

./: CMakeLists.txt  README.md  bus.c  controls.c  controls.h  cpu.c  gpu.c  interrupts.c  interrupts.h  main.c  timers.c
apps/: CMakeLists.txt  main.c
include/: bus.h  controls.h  cpu.h  gpu.h  interrupts.h  timers.h  types.h
include/NapptendoGB/: bus.h  cpu.h  debug.h  gpu.h  timers.h
src/: CMakeLists.txt  bus.c  controls.c  cpu.c  debug.c  gpu.c  interrupts.c  timers.c
